--- a/dl/notebooks/03_Computer Vision/03. MNIST classification.ipynb
+++ b/dl/notebooks/03_Computer Vision/03. MNIST classification.ipynb
@@ -313,9 +313,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "........................\n",
+      "Train Loss : 2.308418 [     0 / 60000 ]\n",
+      "Train Loss : 0.578652 [  6400 / 60000 ]\n",
+      "Train Loss : 0.629094 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.258987 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.332713 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.283092 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.312774 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.115160 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.223434 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.365440 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 96.1%, Avg Loss : 0.123018\n",
+      "\n",
+      "Epoch 2\n",
+      "........................\n",
+      "Train Loss : 0.121338 [     0 / 60000 ]\n",
+      "Train Loss : 0.204886 [  6400 / 60000 ]\n",
+      "Train Loss : 0.031465 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.042783 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.075540 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.108829 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.143746 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.055753 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.158582 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.018333 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 97.9%, Avg Loss : 0.062799\n",
+      "\n",
+      "Epoch 3\n",
+      "........................\n",
+      "Train Loss : 0.100895 [     0 / 60000 ]\n",
+      "Train Loss : 0.056424 [  6400 / 60000 ]\n",
+      "Train Loss : 0.088258 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.048468 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.156211 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.068873 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.116798 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.100221 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.033914 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.024882 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 98.5%, Avg Loss : 0.046451\n",
+      "\n",
+      "Epoch 4\n",
+      "........................\n",
+      "Train Loss : 0.046732 [     0 / 60000 ]\n",
+      "Train Loss : 0.066970 [  6400 / 60000 ]\n",
+      "Train Loss : 0.046438 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.016657 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.002258 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.037693 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.046216 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.114093 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.047929 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.014166 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 98.8%, Avg Loss : 0.035057\n",
+      "\n",
+      "Epoch 5\n",
+      "........................\n",
+      "Train Loss : 0.082395 [     0 / 60000 ]\n",
+      "Train Loss : 0.071979 [  6400 / 60000 ]\n",
+      "Train Loss : 0.037483 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.019582 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.011755 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.014590 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.006173 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.090231 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.007358 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.051804 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 98.8%, Avg Loss : 0.035607\n",
+      "\n",
+      "Epoch 6\n",
+      "........................\n",
+      "Train Loss : 0.040825 [     0 / 60000 ]\n",
+      "Train Loss : 0.015232 [  6400 / 60000 ]\n",
+      "Train Loss : 0.021404 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.104341 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.029223 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.008189 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.030824 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.035950 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.028329 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.052893 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 98.9%, Avg Loss : 0.032424\n",
+      "\n",
+      "Epoch 7\n",
+      "........................\n",
+      "Train Loss : 0.038955 [     0 / 60000 ]\n",
+      "Train Loss : 0.000671 [  6400 / 60000 ]\n",
+      "Train Loss : 0.018639 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.011312 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.024755 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.054254 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.011194 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.009602 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.154124 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.123500 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 99.1%, Avg Loss : 0.027807\n",
+      "\n",
+      "Epoch 8\n",
+      "........................\n",
+      "Train Loss : 0.066702 [     0 / 60000 ]\n",
+      "Train Loss : 0.030601 [  6400 / 60000 ]\n",
+      "Train Loss : 0.045892 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.077648 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.004599 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.009393 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.052304 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.046473 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.005525 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.006740 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 99.2%, Avg Loss : 0.024863\n",
+      "\n",
+      "Epoch 9\n",
+      "........................\n",
+      "Train Loss : 0.018073 [     0 / 60000 ]\n",
+      "Train Loss : 0.010842 [  6400 / 60000 ]\n",
+      "Train Loss : 0.018859 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.001835 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.000466 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.035981 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.008233 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.006930 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.022139 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.043178 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 99.1%, Avg Loss : 0.026201\n",
+      "\n",
+      "Epoch 10\n",
+      "........................\n",
+      "Train Loss : 0.005405 [     0 / 60000 ]\n",
+      "Train Loss : 0.029329 [  6400 / 60000 ]\n",
+      "Train Loss : 0.042930 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.003973 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.001859 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.000223 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.120405 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.009609 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.017108 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.004127 [ 57600 / 60000 ]\n",
+      "Test Error : \n",
+      " Accuracy : 99.0%, Avg Loss : 0.030879\n",
+      "\n",
+      "Experiment Successful\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 10\n",
     "for t in range(epochs):\n",
@@ -325,6 +483,13 @@
     "\n",
     "print(\"Experiment Successful\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
