--- a/dl/notebooks/03_Computer Vision/05. Inception V1.ipynb
+++ b/dl/notebooks/03_Computer Vision/05. Inception V1.ipynb
@@ -484,10 +484,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_x = torch.randn(64, 3, 224, 224)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 1000])\n",
+      "torch.Size([64, 1000])\n",
+      "torch.Size([64, 1000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 훈련 모드일 때는 aux classifer가 작동\n",
+    "model.train()\n",
+    "pred, aux2, aux1 = model(test_x)\n",
+    "\n",
+    "print(pred.shape)\n",
+    "print(aux2.shape)\n",
+    "print(aux1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 1000])\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 테스트 모드일 때는 aux classifier가 작동 안함\n",
+    "model.eval()\n",
+    "\n",
+    "pred, aux2, aux1 = model(test_x)\n",
+    "\n",
+    "print(pred.shape)\n",
+    "print(aux2)\n",
+    "print(aux1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def youngsin_plan(date):\n",
+    "    if date.place() == \"madeul\":\n",
+    "        print(\"i am 본가에요\")\n",
+    "    else:\n",
+    "        print(f\"i am {date.place()}\")"
+   ]
   }
  ],
  "metadata": {
