--- a/dl/notebooks/03_Computer Vision/02. CNN Filter.ipynb
+++ b/dl/notebooks/03_Computer Vision/02. CNN Filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 필터 정의\n",
+    "# N 차원을 나타내기 위해 []로 한 번 더 묶음\n",
     "vertical_filter = torch.tensor(\n",
     "    [\n",
     "        [\n",
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +79,7 @@
        "torch.Size([1, 3, 959, 640])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,23 +88,24 @@
     "# Conv2d 연산을 함수처럼 사용\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "images = load_image(IMAGE_PATH)\n",
-    "images.shape"
+    "image = load_image(IMAGE_PATH)\n",
+    "image.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertical_output = F.conv2d(images, vertical_filter)\n",
-    "horizontal_output = F.conv2d(images, horizontal_filter)"
+    "# F.conv2d 호출 시 layer 정의 없이 바로 convolution 연산 수행\n",
+    "vertical_output = F.conv2d(image, vertical_filter)\n",
+    "horizontal_output = F.conv2d(image, horizontal_filter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +114,7 @@
        "(-0.5, 637.5, 956.5, -0.5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,7 +136,7 @@
     "fig, ax = plt.subplots(1, 4, figsize=(20, 5))\n",
     "\n",
     "# 원본 이미지 시각화\n",
-    "ax[0].imshow(images[0].permute(1, 2, 0))\n",
+    "ax[0].imshow(image[0].permute(1, 2, 0))\n",
     "ax[0].set_title(\"Original Image\")\n",
     "ax[0].axis(\"off\")\n",
     "\n",
