--- a/dl/projects/Transfer Learning, Fine Tuning.ipynb
+++ b/dl/projects/Transfer Learning, Fine Tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Errno 2] No such file or directory: '../data/img/kpop_faces'\n",
-      "/Users/leeseungjun/Desktop/study/TIL_ML/dl/data/img\n"
+      "/Users/leeseungjun/Desktop/study/TIL_ML/dl/data/img/kpop_faces\n"
      ]
     }
    ],
@@ -34,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unzip:  cannot find or open Kpop_Faces.zip, Kpop_Faces.zip.zip or Kpop_Faces.zip.ZIP.\n"
+      "Archive:  Kpop_Faces.zip\n"
      ]
     }
    ],
