--- a/dl/notebooks/04_Natural Language Processing/02. RNN.ipynb
+++ b/dl/notebooks/04_Natural Language Processing/02. RNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# RNN 입력 데이터 (projection layer)\n",
-    "inputs = np.random.random((timesteps, input_size))  # D x t\n",
+    "inputs = np.random.random((timesteps, input_size))  # t x D\n",
     "\n",
     "# hidden state\n",
     "hidden_state_t = np.zeros((hidden_size,))  # h_0 = 0"
@@ -40,25 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.4740404 , 0.70393955, 0.07639192, 0.07274193],\n",
-       "       [0.36624767, 0.60855802, 0.97340462, 0.33911153],\n",
-       "       [0.09112802, 0.53190302, 0.62253596, 0.15253293],\n",
-       "       [0.96735825, 0.42700491, 0.00766842, 0.82660868],\n",
-       "       [0.938348  , 0.82702749, 0.18642995, 0.27837966],\n",
-       "       [0.26104421, 0.43675511, 0.51025156, 0.15675488],\n",
-       "       [0.43244996, 0.96730805, 0.75777186, 0.46823261],\n",
-       "       [0.48359134, 0.50054584, 0.97773736, 0.50846267],\n",
-       "       [0.72626825, 0.96900907, 0.26672834, 0.64730058],\n",
-       "       [0.5306335 , 0.45031866, 0.14121373, 0.79564098]])"
+       "array([[0.55005779, 0.70699418, 0.27868454, 0.40742211],\n",
+       "       [0.40851319, 0.92599005, 0.09660356, 0.67034797],\n",
+       "       [0.00240994, 0.45084885, 0.38246113, 0.17397006],\n",
+       "       [0.8817862 , 0.67123798, 0.54660679, 0.07816789],\n",
+       "       [0.56690557, 0.95537761, 0.93295766, 0.30609235],\n",
+       "       [0.33600518, 0.1628346 , 0.00200744, 0.96494052],\n",
+       "       [0.92713887, 0.77960703, 0.2159499 , 0.22218719],\n",
+       "       [0.11635071, 0.51666084, 0.91775734, 0.64956564],\n",
+       "       [0.39259072, 0.65503127, 0.87092849, 0.52694392],\n",
+       "       [0.38869996, 0.08502068, 0.7066489 , 0.7412308 ]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,33 +110,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.57233133 0.83320468 0.62405135 0.5563321  0.73192675 0.75505076\n",
-      "  0.76346329 0.60714161]\n",
-      " [0.99970929 0.99934681 0.9984037  0.99568118 0.99852231 0.99908636\n",
-      "  0.99948534 0.99836627]\n",
-      " [0.99996845 0.99974602 0.99983944 0.99857436 0.99958013 0.99974239\n",
-      "  0.99980824 0.99979578]\n",
-      " [0.99998353 0.99992415 0.99991764 0.99967546 0.99969424 0.99987357\n",
-      "  0.99983488 0.99987852]\n",
-      " [0.99997063 0.99985376 0.9999276  0.99925842 0.99982861 0.99987391\n",
-      "  0.99987287 0.99986328]\n",
-      " [0.99996383 0.99974692 0.99985283 0.99863859 0.99954205 0.99976828\n",
-      "  0.99978305 0.99979495]\n",
-      " [0.99998859 0.99992327 0.99991825 0.99944892 0.99989465 0.99988418\n",
-      "  0.99994144 0.99990164]\n",
-      " [0.99998844 0.99994257 0.9999174  0.99947613 0.99985617 0.99991842\n",
-      "  0.99993841 0.99990751]\n",
-      " [0.99998721 0.99991942 0.99992409 0.9995987  0.99986405 0.99986662\n",
-      "  0.99991239 0.99989391]\n",
-      " [0.99998451 0.99989823 0.99988029 0.9995821  0.99958533 0.9998003\n",
-      "  0.99980867 0.99985471]]\n"
+      "[[0.95970007 0.89367712 0.91889597 0.90383027 0.8924485  0.92634026\n",
+      "  0.94813164 0.86547663]\n",
+      " [0.99997725 0.99997739 0.99994938 0.999922   0.99947753 0.99992674\n",
+      "  0.99996446 0.99997044]\n",
+      " [0.99992801 0.99997755 0.99994725 0.99965346 0.99945178 0.9997455\n",
+      "  0.99991737 0.99997384]\n",
+      " [0.99998823 0.99999399 0.99996711 0.99994117 0.99976263 0.99985392\n",
+      "  0.99993988 0.9999846 ]\n",
+      " [0.99998902 0.99999675 0.99998992 0.99996147 0.99987686 0.99993557\n",
+      "  0.99997241 0.99999139]\n",
+      " [0.99997931 0.99998724 0.99993936 0.99991908 0.99933586 0.99992355\n",
+      "  0.99996794 0.99997649]\n",
+      " [0.9999915  0.99999183 0.99995994 0.99995904 0.99969848 0.99990051\n",
+      "  0.99995682 0.99998384]\n",
+      " [0.99997306 0.99999548 0.99998664 0.99991275 0.99979971 0.99992444\n",
+      "  0.99997009 0.99998842]\n",
+      " [0.99998382 0.99999617 0.99998667 0.99994432 0.99982861 0.99992945\n",
+      "  0.99997055 0.9999894 ]\n",
+      " [0.99997623 0.99999522 0.9999704  0.99990742 0.99968887 0.99988985\n",
+      "  0.99995517 0.99998321]]\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "torch.Size([1, 4, 5])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,23 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.0136,  0.1741, -0.0791,  0.4193, -0.4857,  0.0182, -0.4776,\n",
-       "           0.4980],\n",
-       "         [ 0.1125,  0.1758, -0.1855,  0.5135, -0.4631, -0.0884, -0.4938,\n",
-       "           0.5450],\n",
-       "         [ 0.1371,  0.0888, -0.1683,  0.5545, -0.4568, -0.0620, -0.4910,\n",
-       "           0.5196],\n",
-       "         [ 0.1514,  0.0985, -0.1528,  0.5467, -0.4385, -0.0661, -0.5066,\n",
-       "           0.4927]]], grad_fn=<TransposeBackward1>)"
+       "tensor([[[-0.5376,  0.0150,  0.3870,  0.1376, -0.2885,  0.2072,  0.0701,\n",
+       "          -0.0450],\n",
+       "         [-0.3234,  0.1055,  0.4030, -0.1511, -0.2127,  0.0938, -0.0725,\n",
+       "           0.1532],\n",
+       "         [-0.4150,  0.0925,  0.2726, -0.0114, -0.2602, -0.0357, -0.0664,\n",
+       "           0.0636],\n",
+       "         [-0.4399,  0.0600,  0.3075, -0.0010, -0.2849,  0.0260, -0.0283,\n",
+       "           0.0419]]], grad_fn=<TransposeBackward1>)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,17 +287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.1514,  0.0985, -0.1528,  0.5467, -0.4385, -0.0661, -0.5066,\n",
-       "           0.4927]]], grad_fn=<StackBackward0>)"
+       "tensor([[[-0.4399,  0.0600,  0.3075, -0.0010, -0.2849,  0.0260, -0.0283,\n",
+       "           0.0419]]], grad_fn=<StackBackward0>)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "torch.Size([1, 4, 8])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "torch.Size([2, 1, 8])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "torch.Size([1, 4, 16])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "torch.Size([2, 1, 8])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
