--- a/dl/notebooks/04_Natural Language Processing/04. Transformer.ipynb
+++ b/dl/notebooks/04_Natural Language Processing/04. Transformer.ipynb
@@ -1384,7 +1384,7 @@
     "            truncation=True,\n",
     "            max_length=max_len,\n",
     "            return_tensors=\"pt\",\n",
-    "        ).input_ids.to(DEVICE)\n",
+    "        ).input_ids.to(device)\n",
     "        trg_texts = [\"</s> \" + s for s in trg_texts]\n",
     "        trg = tokenizer(\n",
     "            trg_texts,\n",
@@ -1392,7 +1392,7 @@
     "            truncation=True,\n",
     "            max_length=max_len,\n",
     "            return_tensors=\"pt\",\n",
-    "        ).input_ids.to(DEVICE)\n",
+    "        ).input_ids.to(device)\n",
     "        # inference\n",
     "        y_hat = model(src, trg[:, :-1])[\n",
     "            0\n",
