--- a/dl/notebooks/04_Natural Language Processing/07. OpenAI Sentence Embedding.ipynb
+++ b/dl/notebooks/04_Natural Language Processing/07. OpenAI Sentence Embedding.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "API_KEY = # your key here\n",
+    "# API_KEY =  your key here\n",
     "\n",
     "client = OpenAI(api_key=API_KEY)"
    ]
