--- a/dl/notebooks/04_Natural Language Processing/07. OpenAI Sentence Embedding.ipynb
+++ b/dl/notebooks/04_Natural Language Processing/07. OpenAI Sentence Embedding.ipynb
@@ -67,20 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"../../data/API_KEY\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
+    "import OpenAI_API_Key\n",
     "\n",
-    "# API_KEY =  your key here\n",
+    "API_KEY = OpenAI_API_Key.API_KEY\n",
     "\n",
     "client = OpenAI(api_key=API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +102,7 @@
        "1536"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
