--- a/dl/notebooks/04_Natural Language Processing/08. Langchain.ipynb
+++ b/dl/notebooks/04_Natural Language Processing/08. Langchain.ipynb
@@ -152,7 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"../../data/API_KEY\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -161,18 +173,19 @@
        "'1.51.2'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
     "import openai\n",
+    "import OpenAI_API_Key\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = (\n",
-    "    # your key here\n",
-    ")\n",
+    "API_KEY = OpenAI_API_Key.API_KEY\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = API_KEY\n",
+    "\n",
     "openai.__version__"
    ]
   },
