--- a/dl/notebooks/04_Natural Language Processing/07. OpenAI Sentence Embedding.ipynb
+++ b/dl/notebooks/04_Natural Language Processing/07. OpenAI Sentence Embedding.ipynb
@@ -10,64 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openai\n",
-      "  Downloading openai-1.51.2-py3-none-any.whl.metadata (24 kB)\n",
-      "Collecting anyio<5,>=3.5.0 (from openai)\n",
-      "  Using cached anyio-4.6.0-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting distro<2,>=1.7.0 (from openai)\n",
-      "  Downloading distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
-      "Collecting httpx<1,>=0.23.0 (from openai)\n",
-      "  Using cached httpx-0.27.2-py3-none-any.whl.metadata (7.1 kB)\n",
-      "Collecting jiter<1,>=0.4.0 (from openai)\n",
-      "  Downloading jiter-0.6.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (5.2 kB)\n",
-      "Collecting pydantic<3,>=1.9.0 (from openai)\n",
-      "  Downloading pydantic-2.9.2-py3-none-any.whl.metadata (149 kB)\n",
-      "Collecting sniffio (from openai)\n",
-      "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
-      "Requirement already satisfied: tqdm>4 in /opt/anaconda3/envs/dl-env/lib/python3.11/site-packages (from openai) (4.66.5)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.11 in /opt/anaconda3/envs/dl-env/lib/python3.11/site-packages (from openai) (4.12.2)\n",
-      "Requirement already satisfied: idna>=2.8 in /opt/anaconda3/envs/dl-env/lib/python3.11/site-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
-      "Requirement already satisfied: certifi in /opt/anaconda3/envs/dl-env/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
-      "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
-      "  Downloading httpcore-1.0.6-py3-none-any.whl.metadata (21 kB)\n",
-      "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
-      "  Using cached h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
-      "Collecting annotated-types>=0.6.0 (from pydantic<3,>=1.9.0->openai)\n",
-      "  Downloading annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
-      "Collecting pydantic-core==2.23.4 (from pydantic<3,>=1.9.0->openai)\n",
-      "  Downloading pydantic_core-2.23.4-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.6 kB)\n",
-      "Downloading openai-1.51.2-py3-none-any.whl (383 kB)\n",
-      "Using cached anyio-4.6.0-py3-none-any.whl (89 kB)\n",
-      "Downloading distro-1.9.0-py3-none-any.whl (20 kB)\n",
-      "Using cached httpx-0.27.2-py3-none-any.whl (76 kB)\n",
-      "Downloading httpcore-1.0.6-py3-none-any.whl (78 kB)\n",
-      "Downloading jiter-0.6.1-cp311-cp311-macosx_11_0_arm64.whl (302 kB)\n",
-      "Downloading pydantic-2.9.2-py3-none-any.whl (434 kB)\n",
-      "Downloading pydantic_core-2.23.4-cp311-cp311-macosx_11_0_arm64.whl (1.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m28.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hUsing cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
-      "Downloading annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
-      "Using cached h11-0.14.0-py3-none-any.whl (58 kB)\n",
-      "Installing collected packages: sniffio, pydantic-core, jiter, h11, distro, annotated-types, pydantic, httpcore, anyio, httpx, openai\n",
-      "Successfully installed annotated-types-0.7.0 anyio-4.6.0 distro-1.9.0 h11-0.14.0 httpcore-1.0.6 httpx-0.27.2 jiter-0.6.1 openai-1.51.2 pydantic-2.9.2 pydantic-core-2.23.4 sniffio-1.3.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +52,8 @@
    ],
    "source": [
     "embedding = client.embeddings.create(\n",
-    "    model=\"text-embedding-ada-002\", input=\"야 저기 차 온다!\"\n",
+    "    model=\"text-embedding-ada-002\",\n",
+    "    input=[\"야 저기 차 온다!\", \"저건 어디로 가는 버스야?\"],\n",
     ")\n",
     "\n",
     "len(embedding.data[0].embedding)"
@@ -117,7 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'openai.types.create_embedding_response.CreateEmbeddingResponse'>\n",
+      "<class 'openai.types.embedding.Embedding'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(embedding))  # OpenAI API의 임베딩 요청에 대한 응답\n",
+    "print(type(embedding.data[0]))  # 각 문장의 임베딩 벡터에 대한 정보를 담은 객체\n",
+    "print(type(embedding.data[0].embedding))  # 임베딩 벡터 (list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +143,7 @@
        "4   홍차 녹차 중에 어떤 차가 좋으세요?"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -278,13 +243,13 @@
        "4   홍차 녹차 중에 어떤 차가 좋으세요?  [0.005494758952409029, -0.011675575748085976, ..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"embedding\"] = df.apply(lambda row: get_embedding(row.text), axis=1)\n",
+    "df[\"embedding\"] = [get_embedding(text) for text in df[\"text\"]]\n",
     "df"
    ]
   },
@@ -297,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,9 +279,11 @@
     "    query : 질의할 문장\n",
     "    \"\"\"\n",
     "    query_embedding = get_embedding(query)\n",
-    "    df[\"similarity\"] = df.embedding.apply(\n",
-    "        lambda x: cos_sim(np.array(x), np.array(query_embedding))\n",
-    "    )\n",
+    "\n",
+    "    df[\"similarity\"] = [\n",
+    "        cos_sim(np.array(emb_vec), np.array(query_embedding))\n",
+    "        for emb_vec in df[\"embedding\"]\n",
+    "    ]\n",
     "\n",
     "    results_co = df.sort_values(\"similarity\", ascending=False, ignore_index=True)\n",
     "    return results_co.head(3)"
@@ -324,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +355,7 @@
        "2    0.848097  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +431,7 @@
        "2    0.812300  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,13 +440,6 @@
     "sim_result = return_answer_candidate(df, \"예쁜 카페가고 싶어\")\n",
     "sim_result"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
