--- a/dl/notebooks/04_Natural Language Processing/08. Langchain.ipynb
+++ b/dl/notebooks/04_Natural Language Processing/08. Langchain.ipynb
@@ -21,137 +21,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openai\n",
-      "  Using cached openai-1.51.2-py3-none-any.whl.metadata (24 kB)\n",
-      "Collecting langchain\n",
-      "  Downloading langchain-0.3.3-py3-none-any.whl.metadata (7.1 kB)\n",
-      "Collecting tiktoken\n",
-      "  Downloading tiktoken-0.8.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.6 kB)\n",
-      "Collecting langchain_community\n",
-      "  Downloading langchain_community-0.3.2-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting langchain-openai\n",
-      "  Downloading langchain_openai-0.2.2-py3-none-any.whl.metadata (2.6 kB)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from openai) (4.4.0)\n",
-      "Collecting distro<2,>=1.7.0 (from openai)\n",
-      "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from openai) (0.27.2)\n",
-      "Collecting jiter<1,>=0.4.0 (from openai)\n",
-      "  Using cached jiter-0.6.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (5.2 kB)\n",
-      "Collecting pydantic<3,>=1.9.0 (from openai)\n",
-      "  Using cached pydantic-2.9.2-py3-none-any.whl.metadata (149 kB)\n",
-      "Requirement already satisfied: sniffio in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from openai) (1.3.1)\n",
-      "Requirement already satisfied: tqdm>4 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from openai) (4.66.5)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.11 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from openai) (4.12.2)\n",
-      "Requirement already satisfied: PyYAML>=5.3 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from langchain) (6.0.2)\n",
-      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from langchain) (2.0.32)\n",
-      "Collecting aiohttp<4.0.0,>=3.8.3 (from langchain)\n",
-      "  Downloading aiohttp-3.10.10-cp311-cp311-macosx_11_0_arm64.whl.metadata (7.6 kB)\n",
-      "Collecting langchain-core<0.4.0,>=0.3.10 (from langchain)\n",
-      "  Downloading langchain_core-0.3.10-py3-none-any.whl.metadata (6.3 kB)\n",
-      "Collecting langchain-text-splitters<0.4.0,>=0.3.0 (from langchain)\n",
-      "  Downloading langchain_text_splitters-0.3.0-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Collecting langsmith<0.2.0,>=0.1.17 (from langchain)\n",
-      "  Downloading langsmith-0.1.134-py3-none-any.whl.metadata (13 kB)\n",
-      "Requirement already satisfied: numpy<2,>=1 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from langchain) (1.26.4)\n",
-      "Requirement already satisfied: requests<3,>=2 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from langchain) (2.32.3)\n",
-      "Requirement already satisfied: tenacity!=8.4.0,<9.0.0,>=8.1.0 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from langchain) (8.5.0)\n",
-      "Collecting regex>=2022.1.18 (from tiktoken)\n",
-      "  Using cached regex-2024.9.11-cp311-cp311-macosx_11_0_arm64.whl.metadata (40 kB)\n",
-      "Collecting dataclasses-json<0.7,>=0.5.7 (from langchain_community)\n",
-      "  Downloading dataclasses_json-0.6.7-py3-none-any.whl.metadata (25 kB)\n",
-      "Collecting pydantic-settings<3.0.0,>=2.4.0 (from langchain_community)\n",
-      "  Downloading pydantic_settings-2.5.2-py3-none-any.whl.metadata (3.5 kB)\n",
-      "Collecting aiohappyeyeballs>=2.3.0 (from aiohttp<4.0.0,>=3.8.3->langchain)\n",
-      "  Downloading aiohappyeyeballs-2.4.3-py3-none-any.whl.metadata (6.1 kB)\n",
-      "Collecting aiosignal>=1.1.2 (from aiohttp<4.0.0,>=3.8.3->langchain)\n",
-      "  Using cached aiosignal-1.3.1-py3-none-any.whl.metadata (4.0 kB)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (24.2.0)\n",
-      "Collecting frozenlist>=1.1.1 (from aiohttp<4.0.0,>=3.8.3->langchain)\n",
-      "  Downloading frozenlist-1.4.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (12 kB)\n",
-      "Collecting multidict<7.0,>=4.5 (from aiohttp<4.0.0,>=3.8.3->langchain)\n",
-      "  Downloading multidict-6.1.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (5.0 kB)\n",
-      "Collecting yarl<2.0,>=1.12.0 (from aiohttp<4.0.0,>=3.8.3->langchain)\n",
-      "  Downloading yarl-1.14.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (52 kB)\n",
-      "Requirement already satisfied: idna>=2.8 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from anyio<5,>=3.5.0->openai) (3.8)\n",
-      "Collecting marshmallow<4.0.0,>=3.18.0 (from dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-      "  Downloading marshmallow-3.22.0-py3-none-any.whl.metadata (7.2 kB)\n",
-      "Collecting typing-inspect<1,>=0.4.0 (from dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-      "  Downloading typing_inspect-0.9.0-py3-none-any.whl.metadata (1.5 kB)\n",
-      "Requirement already satisfied: certifi in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai) (2024.7.4)\n",
-      "Requirement already satisfied: httpcore==1.* in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai) (1.0.5)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
-      "Collecting jsonpatch<2.0,>=1.33 (from langchain-core<0.4.0,>=0.3.10->langchain)\n",
-      "  Downloading jsonpatch-1.33-py2.py3-none-any.whl.metadata (3.0 kB)\n",
-      "Requirement already satisfied: packaging<25,>=23.2 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from langchain-core<0.4.0,>=0.3.10->langchain) (24.1)\n",
-      "Collecting orjson<4.0.0,>=3.9.14 (from langsmith<0.2.0,>=0.1.17->langchain)\n",
-      "  Downloading orjson-3.10.7-cp311-cp311-macosx_10_15_x86_64.macosx_11_0_arm64.macosx_10_15_universal2.whl.metadata (50 kB)\n",
-      "Collecting requests-toolbelt<2.0.0,>=1.0.0 (from langsmith<0.2.0,>=0.1.17->langchain)\n",
-      "  Downloading requests_toolbelt-1.0.0-py2.py3-none-any.whl.metadata (14 kB)\n",
-      "Collecting annotated-types>=0.6.0 (from pydantic<3,>=1.9.0->openai)\n",
-      "  Using cached annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
-      "Collecting pydantic-core==2.23.4 (from pydantic<3,>=1.9.0->openai)\n",
-      "  Using cached pydantic_core-2.23.4-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.6 kB)\n",
-      "Collecting python-dotenv>=0.21.0 (from pydantic-settings<3.0.0,>=2.4.0->langchain_community)\n",
-      "  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from requests<3,>=2->langchain) (3.3.2)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from requests<3,>=2->langchain) (2.2.2)\n",
-      "Requirement already satisfied: jsonpointer>=1.9 in /opt/anaconda3/envs/ml-env/lib/python3.11/site-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.4.0,>=0.3.10->langchain) (3.0.0)\n",
-      "Collecting mypy-extensions>=0.3.0 (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-      "  Using cached mypy_extensions-1.0.0-py3-none-any.whl.metadata (1.1 kB)\n",
-      "Collecting propcache>=0.2.0 (from yarl<2.0,>=1.12.0->aiohttp<4.0.0,>=3.8.3->langchain)\n",
-      "  Downloading propcache-0.2.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (7.7 kB)\n",
-      "Using cached openai-1.51.2-py3-none-any.whl (383 kB)\n",
-      "Downloading langchain-0.3.3-py3-none-any.whl (1.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m20.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading tiktoken-0.8.0-cp311-cp311-macosx_11_0_arm64.whl (982 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m982.4/982.4 kB\u001b[0m \u001b[31m20.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading langchain_community-0.3.2-py3-none-any.whl (2.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.4/2.4 MB\u001b[0m \u001b[31m17.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading langchain_openai-0.2.2-py3-none-any.whl (49 kB)\n",
-      "Downloading aiohttp-3.10.10-cp311-cp311-macosx_11_0_arm64.whl (390 kB)\n",
-      "Downloading dataclasses_json-0.6.7-py3-none-any.whl (28 kB)\n",
-      "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
-      "Using cached jiter-0.6.1-cp311-cp311-macosx_11_0_arm64.whl (302 kB)\n",
-      "Downloading langchain_core-0.3.10-py3-none-any.whl (404 kB)\n",
-      "Downloading langchain_text_splitters-0.3.0-py3-none-any.whl (25 kB)\n",
-      "Downloading langsmith-0.1.134-py3-none-any.whl (295 kB)\n",
-      "Using cached pydantic-2.9.2-py3-none-any.whl (434 kB)\n",
-      "Using cached pydantic_core-2.23.4-cp311-cp311-macosx_11_0_arm64.whl (1.8 MB)\n",
-      "Downloading pydantic_settings-2.5.2-py3-none-any.whl (26 kB)\n",
-      "Using cached regex-2024.9.11-cp311-cp311-macosx_11_0_arm64.whl (284 kB)\n",
-      "Downloading aiohappyeyeballs-2.4.3-py3-none-any.whl (14 kB)\n",
-      "Using cached aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
-      "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
-      "Downloading frozenlist-1.4.1-cp311-cp311-macosx_11_0_arm64.whl (53 kB)\n",
-      "Downloading jsonpatch-1.33-py2.py3-none-any.whl (12 kB)\n",
-      "Downloading marshmallow-3.22.0-py3-none-any.whl (49 kB)\n",
-      "Downloading multidict-6.1.0-cp311-cp311-macosx_11_0_arm64.whl (29 kB)\n",
-      "Downloading orjson-3.10.7-cp311-cp311-macosx_10_15_x86_64.macosx_11_0_arm64.macosx_10_15_universal2.whl (251 kB)\n",
-      "Downloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
-      "Downloading requests_toolbelt-1.0.0-py2.py3-none-any.whl (54 kB)\n",
-      "Downloading typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
-      "Downloading yarl-1.14.0-cp311-cp311-macosx_11_0_arm64.whl (85 kB)\n",
-      "Using cached mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
-      "Downloading propcache-0.2.0-cp311-cp311-macosx_11_0_arm64.whl (45 kB)\n",
-      "Installing collected packages: regex, python-dotenv, pydantic-core, propcache, orjson, mypy-extensions, multidict, marshmallow, jsonpatch, jiter, frozenlist, distro, annotated-types, aiohappyeyeballs, yarl, typing-inspect, tiktoken, requests-toolbelt, pydantic, aiosignal, pydantic-settings, openai, langsmith, dataclasses-json, aiohttp, langchain-core, langchain-text-splitters, langchain-openai, langchain, langchain_community\n",
-      "Successfully installed aiohappyeyeballs-2.4.3 aiohttp-3.10.10 aiosignal-1.3.1 annotated-types-0.7.0 dataclasses-json-0.6.7 distro-1.9.0 frozenlist-1.4.1 jiter-0.6.1 jsonpatch-1.33 langchain-0.3.3 langchain-core-0.3.10 langchain-openai-0.2.2 langchain-text-splitters-0.3.0 langchain_community-0.3.2 langsmith-0.1.134 marshmallow-3.22.0 multidict-6.1.0 mypy-extensions-1.0.0 openai-1.51.2 orjson-3.10.7 propcache-0.2.0 pydantic-2.9.2 pydantic-core-2.23.4 pydantic-settings-2.5.2 python-dotenv-1.0.1 regex-2024.9.11 requests-toolbelt-1.0.0 tiktoken-0.8.0 typing-inspect-0.9.0 yarl-1.14.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install openai langchain tiktoken langchain_community langchain-openai"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
@@ -1040,7 +909,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-env",
+   "display_name": "dl-env",
    "language": "python",
    "name": "python3"
   },
@@ -1054,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
